Actualización los archivos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="sin-input ocultar" id="con-texto">
                 <p class="texto-salida" id="texto-salida"></p>
-                <button class="boton boton-transparente boton-salida" id="copiar">Copiar</button>
+                <button class="boton-transparente boton-salida" id="copiar">Copiar</button>
             </div>
         </div>
     </main>
